Version 2.02.98 -
=================================
  Do not start dmeventd for lvchange --resync when monitoring is off.
  Remove ExecStartPost with pvscan --cache from lvm2-lvmetad.service.
  Report invalid percentage for property snap_percent of non-snaphot LVs.
  Disallow convertion of thins to mirrors.
  Fix lvm2api data_percent reporting for thin volumes.
  Do not allow RAID LVs in a clustered volume group.
  Update lvconvert to support stacking of devs for thin meta/data devs.
  Support changes of permissions for thin snapshot volumes.
  Enhance insert_layer_for_lv() with recursive rename for _tdata LVs.
  Skip building dm tree for thin pool when called with origin_only flag.
  Add internal lv_rename_update() to rename LV without updating mda.
  Ensure descriptors 0,1,2 are always available.
  Use /proc/self/fd for closing openned descriptors.
  Add missing pkg init with --enable-testing in configure.in (2.02.71).
  Fix inability to create, extend or convert to a large (> 1TiB) RAID LV.
  Add (p)artial attribute to lvs.
  Don't try to issue discards to a missing PV to avoid segfault.
  Prevent lvremove from removing LVs that have any part missing.
  Clear LV_NOSYNCED flag when a RAID1 LV is converted to a linear LV.
  Disallow RAID1 upconvert if the LV was created with --nosync.
  Depend on systemd-udev-settle in units generated by activation generator.
  Fix vgchange -aay to activate proper logical volumes.
  Properly handle 'resync' of RAID LVs.
  Disallow addition of RAID images until the array is in-sync.
  Fix RAID LV creation with '--test' so valid commands do not fail.
  Add lvm_lv_rename() to lvm2api.
  Fix setvbuf code by closing and reopening stream before changing buffer.
  Disable private buffering when using liblvm.
  When private stdin/stdout buffering is not used always use silent mode.
  Add log/silent to lvm.conf equivalent to -qq.
  Suppress non-essential stdout with -qq.
  Switch non-essential log_print messages to log_print_unless_silent.